<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".supplier.view.FragmentSupplierAdd">

    <data>

        <variable
            name="supplier"
            type="com.construction.app.supplier.model.Supplier" />
    </data>

    <ScrollView style="@style/LayoutMatchParent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutMain"
            style="@style/LayoutSection"
            android:orientation="vertical"
            android:padding="@dimen/spacing3x">

            <androidx.appcompat.widget.LinearLayoutCompat style="@style/LayoutSection">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/LayoutWrapContent"
                    android:layout_marginTop="@dimen/spacing2x"
                    app:srcCompat="@drawable/ic_supplier" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutName"
                    style="@style/TextInputLayout"
                    android:layout_marginStart="@dimen/spacing3x"
                    app:counterEnabled="true"
                    app:counterMaxLength="@string/limitMaxSupplierName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edName"
                        style="@style/TextInputEditText"
                        android:hint="@string/hintSupplierName"
                        android:inputType="textCapWords"
                        android:maxLength="@string/limitMaxSupplierName"
                        android:singleLine="true"
                        android:text="@={supplier.name}"
                        android:textColor="@color/colorTextLite" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                style="@style/LayoutSection"
                android:layout_marginTop="@dimen/spacing1x">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/LayoutWrapContent"
                    android:layout_marginTop="@dimen/spacing2x"
                    app:srcCompat="@drawable/ic_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutContact"
                    style="@style/TextInputLayout"
                    android:layout_marginStart="@dimen/spacing3x"
                    app:counterEnabled="true"
                    app:counterMaxLength="@string/limitMaxContactNumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edContact"
                        style="@style/TextInputEditText"
                        android:hint="@string/hintContactNumber"
                        android:inputType="number"
                        android:maxLength="@string/limitMaxContactNumber"
                        android:singleLine="true"
                        android:text="@={supplier.contact}"
                        android:textColor="@color/colorTextLite" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                style="@style/LayoutSection"
                android:layout_marginTop="@dimen/spacing1x">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/LayoutWrapContent"
                    android:layout_marginTop="@dimen/spacing2x"
                    app:srcCompat="@drawable/ic_location" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutAddress"
                    style="@style/TextInputLayout"
                    android:layout_marginStart="@dimen/spacing3x"
                    app:counterEnabled="true"
                    app:counterMaxLength="@string/limitMaxLabourAddress">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edAddress"
                        style="@style/TextInputEditText.Area"
                        android:gravity="top"
                        android:hint="@string/hintSupplierAddress"
                        android:inputType="textMultiLine|textCapWords"
                        android:maxLength="@string/limitMaxLabourAddress"
                        android:text="@={supplier.address}"
                        android:textColor="@color/colorTextLite" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.construction.app.base.utility.button.ActionButton
                android:id="@+id/buttonAdd"
                style="@style/LayoutSection"
                android:layout_marginTop="@dimen/spacing7x"
                android:text="@string/buttonAdd"
                app:actionButtonType="MediumEmphasis" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>